@@ -8,6 +8,7 @@ PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.
 
   - #5959, #5984, Prevent histogram target overflow when analysing massive tables (Darafei Praliaskouski)
   - #6020, schema qualify call in ST_MPointFromText (Paul Ramsey)
+  - #6027, Fix RemoveUnusedPrimitives without topology in search_path (Sandro Santilli)
   - #6028, crash indexing malformed empty polygon (Paul Ramsey)
 
 
